--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         </h1>
                         <p class="mbr-text mbr-fonts-style display-7">We always try to give best out of best of milk
                             derived sweets<br>You are just one step away from experiencing something awesome!!</p>
-                        <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="index.html">Buy
+                        <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="features10.html">Buy
                                 now</a>
                             <a class="btn btn-primary-outline display-4" href="index.html#form7-d">Subscribe</a>
                         </div>
