--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@
                     
 
                 </div>
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#cart">Cart (<span
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#cart"><i class="fa fa-cart-plus" aria-hidden="true"></i> (<span
                             class="total-count"></span>)</button>
-                                <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse"
+                
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse"
                     data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <div class="hamburger">
