--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 
     <title>Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
     <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -68,7 +70,7 @@
                     
 
                 </div>
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#cart"><i class="fa fa-cart-plus" aria-hidden="true"></i> (<span
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#cart"><i class="fa fa-shopping-cart" style="font-size:30px"></i> (<span
                             class="total-count"></span>)</button>
                 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse"
