--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                         <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2">
                             <strong>Get Ready To Experience Gokul's Traditional&nbsp;Taste</strong>
                         </h1>
-                        <p class="mbr-text mbr-fonts-style display-7">We always try to give best out of best of milk
-                            derived sweets<br>You are just one step away from experiencing something awesome!!</p>
+                        <p class="mbr-text mbr-fonts-style display-7">We always try to give the best out of bests milk
+                            derived sweets.<br>You are just one step away from experiencing something awesome!!</p>
                         <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="index.html#features11-7">Buy
                                 now</a>
                             <a class="btn btn-primary-outline display-4" href="index.html#form7-d">Subscribe</a>
@@ -165,7 +165,7 @@
                             <span class="mbr-iconfont mobi-mbri-hearth mobi-mbri"
                                 style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
                             <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
-                                <strong>Favorite</strong>
+                                <strong>Favourite</strong>
                             </h4>
                         </div>
                     </div>
@@ -229,8 +229,8 @@
                                     <div class="col-12">
                                         <div class="bottom-line">
                                             <p class="mbr-text mbr-fonts-style m-0 display-7">
-                                                Kunda is a North Karnataka dish made by reducing and curdling the milk
-                                                and cooking with caramalised sugar.
+                                                Kunda is a North Karnataka dish made by reducing and curdling milk
+                                                and cooking with caramalized sugar.
                                             </p>
                                             <div style="float: right;" class="mbr-section-btn item-footer mt-2">
                                                 <a type='button' href="#" data-name="Kunda(200g)" data-price="90"
@@ -309,7 +309,7 @@
                                     <div class="col-12">
                                         <div class="bottom-line">
                                             <p class="mbr-text mbr-fonts-style m-0 display-7">
-                                                Paneer is a fresh acid-set cheese common in the Indian subcontinent made
+                                                Paneer is a fresh acid-set cheese, common in the Indian subcontinent made
                                                 from cow or buffalo milk.
                                             </p>
                                             <div style="float: right;" class="mbr-section-btn item-footer mt-2">
@@ -389,8 +389,10 @@
                         <div class="item-content">
                             <h5 class="item-title mbr-fonts-style display-5">Rasmalai</h5>
                             <h6 class="item-title mbr-fonts-style display-7">₹140/200g</h6>
-                            <p class="mbr-text mbr-fonts-style mt-3 display-7">Ras malai is a dessert originating from
-                                the eastern regions of the Indian subcontinent. </p>
+                            <p class="mbr-text mbr-fonts-style mt-3 display-7">Rasmalai is a popular Bengali sweet of cottage 
+                                cheese balls soaked in thickened, sweetened milk that has been scented with cardamom and 
+                                saffron. 
+                            </p>
                         </div>
                         <div class="mbr-section-btn item-footer mt-2 text-center ">
                             <a type='button' href="#" data-name="Rasmalai(200g)" data-price="140"
