--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                                         <div class="bottom-line">
                                             <p class="mbr-text mbr-fonts-style m-0 display-7">
                                                 Kunda is a North Karnataka dish made by reducing and curdling milk
-                                                and cooking with caramalized sugar.
+                                                and cooking with caramelized sugar.
                                             </p>
                                             <div style="float: right;" class="mbr-section-btn item-footer mt-2">
                                                 <a type='button' href="#" data-name="Kunda(200g)" data-price="90"
@@ -390,8 +390,7 @@
                             <h5 class="item-title mbr-fonts-style display-5">Rasmalai</h5>
                             <h6 class="item-title mbr-fonts-style display-7">₹140/200g</h6>
                             <p class="mbr-text mbr-fonts-style mt-3 display-7">Rasmalai is a popular Bengali sweet of cottage 
-                                cheese balls soaked in thickened, sweetened milk that has been scented with cardamom and 
-                                saffron. 
+                                cheese balls soaked in thickened, sweetened milk scented with cardamom and saffron. 
                             </p>
                         </div>
                         <div class="mbr-section-btn item-footer mt-2 text-center ">
@@ -432,8 +431,8 @@
                             <div id="collapse1_5" class="panel-collapse noScroll collapse" role="tabpanel"
                                 aria-labelledby="headingOne">
                                 <div class="panel-body">
-                                    <p class="mbr-fonts-style panel-text display-7">We do sweet making process with
-                                        special care to give best sweet to our customer</p>
+                                    <p class="mbr-fonts-style panel-text display-7">Gokul sweets are made with
+                                        special care to give the best sweets to our customer. </p>
                                 </div>
                             </div>
                         </div>
@@ -451,8 +450,8 @@
                             <div id="collapse2_5" class="panel-collapse noScroll collapse" role="tabpanel"
                                 aria-labelledby="headingTwo">
                                 <div class="panel-body">
-                                    <p class="mbr-fonts-style panel-text display-7">All Gokul sweet's are good. But
-                                        Kunda is one of Most selling product.</p>
+                                    <p class="mbr-fonts-style panel-text display-7">All Gokul sweets are good. But
+                                        Kunda is one of the most selling product. </p>
                                 </div>
                             </div>
                         </div>
@@ -469,8 +468,8 @@
                             <div id="collapse3_5" class="panel-collapse noScroll collapse" role="tabpanel"
                                 aria-labelledby="headingThree">
                                 <div class="panel-body">
-                                    <p class="mbr-fonts-style panel-text display-7">Yes,We give special discount on
-                                        large/wholesale purchases.</p>
+                                    <p class="mbr-fonts-style panel-text display-7">Yes, we give special discounts on
+                                        large/wholesale purchases. </p>
                                 </div>
                             </div>
                         </div>
@@ -488,7 +487,7 @@
                                 aria-labelledby="headingThree">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">
-                                        Kunda is a North Karnataka dish made by reducing and curdling the milk and
+                                        Kunda is a North Karnataka dish made by reducing and curdling milk and
                                         cooking with caramelized sugar. </p>
                                 </div>
                             </div>
