--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                             <h5 class="item-title mbr-fonts-style display-5">Rasmalai</h5>
                             <h6 class="item-title mbr-fonts-style display-7">₹140/200g</h6>
                             <p class="mbr-text mbr-fonts-style mt-3 display-7">Rasmalai is a popular Bengali sweet of cottage 
-                                cheese balls soaked in thickened, sweetened milk scented with cardamom and saffron. 
+                                cheese balls soaked in thickened milk with cardamom and saffron flavour. 
                             </p>
                         </div>
                         <div class="mbr-section-btn item-footer mt-2 text-center ">
