--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                         <div class="item-content">
                             <h5 class="item-title mbr-fonts-style display-5">Rasmalai</h5>
                             <h6 class="item-title mbr-fonts-style display-7">₹140/200g</h6>
-                            <p class="mbr-text mbr-fonts-style mt-3 display-7">Rasmalai is a popular Bengali sweet of cottage 
+                            <p class="mbr-text mbr-fonts-style mt-3 display-7">Rasmalai is a Bengali sweet made of cottage 
                                 cheese balls soaked in thickened milk with cardamom and saffron flavour. 
                             </p>
                         </div>
