--- a/page1.html
+++ b/page1.html
@@ -163,8 +163,8 @@
                                     <div class="col-12">
                                         <div class="bottom-line">
                                             <p class="mbr-text mbr-fonts-style m-0 display-7">
-                                                Kunda is a North Karnataka dish made by reducing and curdling the milk
-                                                and cooking with caramalised sugar.
+                                                Kunda is a North Karnataka dish made by reducing and curdling milk
+                                                and cooking with caramelized sugar.
                                             </p>
                                             <div style="float: right;" class="mbr-section-btn item-footer mt-2">
                                                 <a type='button' href="#" data-name="Kunda(1kg)" data-price="440"
@@ -242,7 +242,7 @@
                                     <div class="col-12">
                                         <div class="bottom-line">
                                             <p class="mbr-text mbr-fonts-style m-0 display-7">
-                                                Paneer is a fresh acid-set cheese common in the Indian subcontinent made
+                                                Paneer is a fresh acid-set cheese, common in the Indian subcontinent made
                                                 from cow or buffalo milk.
                                             </p>
                                             <div style="float: right;" class="mbr-section-btn item-footer mt-2">
@@ -281,8 +281,7 @@
                                     </div>
                                     <div class="col-12">
                                         <div class="bottom-line">
-                                            <p class="mbr-text mbr-fonts-style m-0 display-7">
-                                                Basundi is a sweetened condensed milk
+                                            <p class="mbr-text mbr-fonts-style m-0 display-7">Basundi is a sweetened condensed milk
                                 made by boiling milk on low heat until the milk is reduced by half.
                                             </p>
                                             <div style="float: right;" class="mbr-section-btn item-footer mt-2">
@@ -322,8 +321,8 @@
                                     <div class="col-12">
                                         <div class="bottom-line">
                                             <p class="mbr-text mbr-fonts-style m-0 display-7">
-                                                Basundi is a sweetened condensed milk
-                                made by boiling milk on low heat until the milk is reduced by half.
+                                               Rasmalai is a Bengali sweet made of cottage 
+                                cheese balls soaked in thickened milk with cardamom and saffron flavour. 
                                             </p>
                                             <div style="float: right;" class="mbr-section-btn item-footer mt-2">
                                                 <a type='button' href="#" data-name="Rasmalai(1Kg)" data-price="700"
@@ -391,13 +390,13 @@
 
                     <div class="mbr-text mbr-fonts-style display-7">
                         <ul>
-                            <li><strong>Pre-Book&nbsp;</strong>Pre-Booking is must. Without prior information we don't
-                                make sweets. its tough to handle milk and milk product.&nbsp; &nbsp; &nbsp;</li>
-                            <li><strong>Payments&nbsp;&nbsp;</strong>Payments should be done before delivery f the
+                            <li><strong>Pre-Book&nbsp;</strong>:Pre-Booking is must. Without prior information we don't
+                                make sweets. It's tough to handle milk and milk products.&nbsp; &nbsp; &nbsp;</li>
+                            <li><strong>Payments&nbsp;&nbsp;</strong>:Payments should be done before delivery of the
                                 products to make transactions smooth and easy.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                                 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>
-                            <li><strong>Feedbacks </strong>We are happy to hear feedback from you. Please help us
-                                improve our product</li>
+                            <li><strong>Feedbacks </strong>:We are happy to hear feedbacks from you. Please help us to
+                                improve our products.</li>
                         </ul>
                     </div>
                 </div>
