--- a/page5.html
+++ b/page5.html
@@ -147,7 +147,8 @@
                             <h5 class="item-title mbr-fonts-style display-5">Basundi</h5>
                             <h6 class="item-title mbr-fonts-style display-7">₹150/200g</h6>
                             <p class="mbr-text mbr-fonts-style mt-3 display-7">Basundi is a sweetened condensed milk
-                                made by boiling milk on low heat until the milk is reduced by half.</p>
+                                made by boiling milk on low heat until the milk is reduced by half.
+                            </p>
                         </div>
                         <div class="mbr-section-btn item-footer mt-2 text-center ">
                             <a type='button' href="#" data-name="Basundi(200g)" data-price="150"
@@ -187,8 +188,9 @@
                         <div class="item-content">
                             <h5 class="item-title mbr-fonts-style display-5">Rasmalai</h5>
                             <h6 class="item-title mbr-fonts-style display-7">₹140/200g</h6>
-                            <p class="mbr-text mbr-fonts-style mt-3 display-7">Ras malai is a dessert originating from
-                                the eastern regions of the Indian subcontinent. </p>
+                            <p class="mbr-text mbr-fonts-style mt-3 display-7">Rasmalai is a Bengali sweet made of cottage 
+                                cheese balls soaked in thickened milk with cardamom and saffron flavour. 
+                            </p>
                         </div>
                         <div class="mbr-section-btn item-footer mt-2 text-center ">
                             <a type='button' href="#" data-name="Rasmalai(200g)" data-price="140"
@@ -207,9 +209,9 @@
                         <div class="item-content">
                             <h5 class="item-title mbr-fonts-style display-5">Kunda</h5>
                             <h6 class="item-title mbr-fonts-style display-7">₹100/200g</h6>
-                            <p class="mbr-text mbr-fonts-style mt-3 display-7">Kunda is a North Karnataka dish made by
-                                reducing and curdling the milk
-                                and cooking with caramalised sugar.</p>
+                            <p class="mbr-text mbr-fonts-style mt-3 display-7">Kunda is a North Karnataka dish made by 
+                            reducing and curdling milk and cooking with caramelized sugar.
+                            </p>
                         </div>
                         <div class="mbr-section-btn item-footer mt-2 text-center ">
                             <a type='button' href="#" data-name="Kunda(200g)" data-price="100"
@@ -230,9 +232,8 @@
                                 Phala</h5>
                             <h6 class="item-title mbr-fonts-style display-7">₹140/200g</h6>
                             <p class="mbr-text mbr-fonts-style mt-3 display-7">A dessert, a sweet that
-                                has no GHEE but it can beautifully come out from the tray as crisp
-                                burfi.
-                            </p>
+                                                has no GHEE but it can beautifully come out from the tray as crisp
+                                                burfi.
                             </p>
                         </div>
                         <div class="mbr-section-btn item-footer mt-2 text-center ">
