--- a/index.html
+++ b/index.html
@@ -349,7 +349,8 @@
                             <h5 class="item-title mbr-fonts-style display-5">Basundi</h5>
                             <h6 class="item-title mbr-fonts-style display-7">₹150/200g</h6>
                             <p class="mbr-text mbr-fonts-style mt-3 display-7">Basundi is a sweetened condensed milk
-                                made by boiling milk on low heat until the milk is reduced by half.</p>
+                                made by boiling milk on low heat until the milk is reduced by half.
+                            </p>
                         </div>
                         <div class="mbr-section-btn item-footer mt-2 text-center ">
                             <a type='button' href="#" data-name="Basundi(200g)" data-price="150"
@@ -369,7 +370,7 @@
                             <h5 class="item-title mbr-fonts-style display-5">Rasgulla</h5>
                             <h6 class="item-title mbr-fonts-style display-7">₹130/200g</h6>
                             <p class="mbr-text mbr-fonts-style mt-3 display-7">Rasgulla is made from ball-shaped
-                                dumplings of chhena and semolina dough, cooked in light sugar syrup made of sugar.<br>
+                                dumplings of chhena and semolina dough, cooked in light sugar syrup.<br>
                             </p>
                         </div>
                         <div class="mbr-section-btn item-footer mt-2 text-center ">
