--- a/page1.html
+++ b/page1.html
@@ -360,9 +360,8 @@
                                     </div>
                                     <div class="col-12">
                                         <div class="bottom-line">
-                                            <p class="mbr-text mbr-fonts-style m-0 display-7">
-                                                Rasgulla is made from ball-shaped
-                                dumplings of chhena and semolina dough, cooked in light sugar syrup made of sugar.
+                                            <p class="mbr-text mbr-fonts-style m-0 display-7">Rasgulla is made from ball-shaped
+                                            dumplings of chhena and semolina dough, cooked in light sugar syrup.
                                             </p>
                                             <div style="float: right;" class="mbr-section-btn item-footer mt-2">
                                                 <a type='button' href="#" data-name="Rasgulla(1Kg)" data-price="650"
