--- a/page5.html
+++ b/page5.html
@@ -168,7 +168,7 @@
                             <h5 class="item-title mbr-fonts-style display-5">Rasgulla</h5>
                             <h6 class="item-title mbr-fonts-style display-7">₹130/200g</h6>
                             <p class="mbr-text mbr-fonts-style mt-3 display-7">Rasgulla is made from ball-shaped
-                                dumplings of chhena and semolina dough, cooked in light sugar syrup made of sugar.<br>
+                                dumplings of chhena and semolina dough, cooked in light sugar syrup.<br>
                             </p>
                         </div>
                         <div class="mbr-section-btn item-footer mt-2 text-center ">
