--- a/page1.html
+++ b/page1.html
@@ -391,10 +391,10 @@
                         <ul>
                             <li><strong>Pre-Book:&nbsp;</strong>Pre-Booking is must. Without prior information we don't
                                 make sweets. It's tough to handle milk and milk products.&nbsp; &nbsp; &nbsp;</li>
-                            <li><strong>Payments:&nbsp;&nbsp;</strong>Payments should be done before delivery of the
+                            <li><strong>Payments:&nbsp;</strong>Payments should be done before delivery of the
                                 products to make transactions smooth and easy.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                                 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>
-                            <li><strong>Feedbacks:</strong>We are happy to hear feedbacks from you. Please help us to
+                            <li><strong>Feedbacks:&nbsp;</strong>We are happy to hear feedbacks from you. Please help us to
                                 improve our products.</li>
                         </ul>
                     </div>
