--- a/page5.html
+++ b/page5.html
@@ -257,12 +257,12 @@
 
                     <div class="mbr-text mbr-fonts-style display-7">
                         <ul>
-                            <li><strong>Pre-Book&nbsp;</strong>Pre-Booking is must. Without prior information we don't
+                            <li><strong>Pre-Book:&nbsp;</strong>Pre-Booking is must. Without prior information we don't
                                 make sweets. its tough to handle milk and milk product.&nbsp; &nbsp; &nbsp;</li>
-                            <li><strong>Payments&nbsp;&nbsp;</strong>Payments should be done before delivery f the
+                            <li><strong>Payments:&nbsp;</strong>Payments should be done before delivery f the
                                 products to make transactions smooth and easy.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                                 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>
-                            <li><strong>Feedbacks </strong>We are happy to hear feedback from you. Please help us
+                            <li><strong>Feedbacks:&nbsp;</strong>We are happy to hear feedback from you. Please help us
                                 improve our product</li>
                         </ul>
                     </div>
