--- a/page5.html
+++ b/page5.html
@@ -258,12 +258,12 @@
                     <div class="mbr-text mbr-fonts-style display-7">
                         <ul>
                             <li><strong>Pre-Book:&nbsp;</strong>Pre-Booking is must. Without prior information we don't
-                                make sweets. its tough to handle milk and milk product.&nbsp; &nbsp; &nbsp;</li>
-                            <li><strong>Payments:&nbsp;</strong>Payments should be done before delivery f the
+                                make sweets. It's tough to handle milk and milk products.&nbsp; &nbsp; &nbsp;</li>
+                            <li><strong>Payments:&nbsp;</strong>Payments should be done before delivery of the
                                 products to make transactions smooth and easy.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                                 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>
-                            <li><strong>Feedbacks:&nbsp;</strong>We are happy to hear feedback from you. Please help us
-                                improve our product</li>
+                            <li><strong>Feedbacks:&nbsp;</strong>We are happy to hear feedbacks from you. Please help us
+                              to improve our products.</li>
                         </ul>
                     </div>
                 </div>
